# GIS-algorithm-practice

01基本算法/: CMakeLists.txt  data.geojson  main.cpp
01基本算法/include/: point.hpp  polygon.hpp
01基本算法/src/: polygon.cpp
02多边形填充-cpp/: CMakeLists.txt  main.cpp
02多边形填充-cpp/include/: edge.hpp  point.hpp
02多边形填充-cpp/src/: edge.cpp
02多边形填充-python/my_project/: clipMap.py  polygonFill.py
02多边形填充-python/tests/: test01.py
02多边形活动边表填充算法/include/: edge.hpp
02多边形活动边表填充算法/src/: edge.cpp
03双线求中心线算法/: CMakeLists.txt  main.cpp
03双线求中心线算法/data/: center_line.dbf  center_line.shp  center_line.shx
03双线求中心线算法/include/: point.hpp  polyline.hpp
03双线求中心线算法/src/: polyline.cpp
04任意多边形裁剪算法/: CMakeLists.txt  main.cpp
04任意多边形裁剪算法/include/: clip.hpp  point.hpp
04任意多边形裁剪算法/src/: clip.cpp
